# VSApp

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
src/: CMakeLists.txt  FrameConverter.cxx  FrameConverter.h  MediaDecoder.cxx  MediaDecoder.h  load_frame.cxx  main.cxx  video_reader.cxx  video_reader.hpp
src/OpenGL/: CMakeLists.txt  main.cxx  video_reader.hpp
src/Qt5/: CMakeLists.txt
src/Qt5/app/: Application.cxx  Application.h
src/Qt5/player/: MediaPlayer.cxx  MediaPlayer.h
src/Qt5/ui/: ControlPanel.cxx  ControlPanel.h  MainWindow.cxx  MainWindow.h  VideoWidget.cxx  VideoWidget.h
